--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -22,6 +22,7 @@
 \usepackage{xcolor}
 \usepackage{listings}
 \usepackage{hyperref}
+\usepackage{array}
 \usepackage[spanish, es-tabla]{babel}
 \decimalpoint
 
