--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -13,6 +13,7 @@
 \bibitem{Dubeau-Gnang} Dubeau, F.; Gnang, C. (2018). Fixed Point and Newton’s Methods in the Complex Plane. \textit{Journal of Complex Analysis, 2018}, 1–11. \url{https://doi.org/10.1155/2018/7289092}
 \bibitem{John-Milnor} Milnor, J. (2006). \textit{Dynamics in one complex variable.} (3rd ed.). Princeton University Press. \url{https://doi.org/10.1515/9781400835539}
 \bibitem{Barnsley} Barnsley, M; Rising, H. (1993). \textit{Fractals everywhere} (2nd ed.). Academic Press.
-
+\bibitem{agness-scott} \textit{Pythagorean Tree}. (s. f.). Agness Scott College. \url{https://larryriddle.agnesscott.org/ifs/pythagorean/pythTree.htm}
+\bibitem{Sandra-Snyder} Snyder, S.S. (2006). Fractals and the Collage Theorem. \textit{MAT Expository Papers}. 49. \url{https://digitalcommons.unl.edu/mathmidexppap/49}.
 
 \end{thebibliography}
