Cambiando un poco la parte de dimensión

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -23,6 +23,7 @@
 \usepackage{listings}
 \usepackage{hyperref}
 \usepackage{array}
+\usepackage{verbatim}
 \usepackage[spanish, es-tabla]{babel}
 \decimalpoint
 
