--- a/memoria/tex/capitulos/capitulo-5.tex
+++ b/memoria/tex/capitulos/capitulo-5.tex
@@ -84,6 +84,7 @@ Además, GLSL utiliza tres tipos especiales de variables además de las propias 
 Vemos por tanto que mediante estas variables podemos intercambiar información entre el código GLSL que se ejecuta en GPU y el código de JavaScript que comanda el uso de WebGL. Sin embargo, claro está que debe de haber alguna forma de transferir esa información desde JavaScript hasta la GPU. De eso mismo se encargan las estructuras conocidas como \textit{buffers}, que procedemos a explicar.
 
 \subsection{Los \textit{Buffer}}
+\label{subsection:buffer}
 
 En el sentido más general de la palabra, un \textit{buffer} es una memoria de almacenamiento temporal de información que permite transferir los datos entre unidades funcionales con características de transferencia diferentes. En nuestro contexto, existen estructuras que almacenan las variables definidas en JavaScript y se transfieren como variables \verb|attribute| o \verb|uniform| al programa \textit{shader}. Por ejemplo, en el siguiente código creamos, a partir de un array de JavaScript que almacena 4 tripletas, cada una representando un color para un vértice, un buffer que las almacena.
 
@@ -126,6 +127,48 @@ gl.enableVertexAttribArray(location);
 
 De forma muy similar, pero con las funciones correspondientes, se procede desde JavaScript para darle valor a las variables tipo \verb|uniform|.
 
-En nuestro caso particular de visualización de fractales, la característica principal de los mismos es que no se pueden expresar a partir de un conjunto de vértices o líneas, sino que son curvas o superficies totalmente irregulares. Por tanto, a efectos prácticos, nuestro vertex shader tomará como entrada los vértices $(-1,-1)$, $(1,-1)$, $(1,1)$ y $(-1,1)$ y no aplicará ninguna transformación, pues ya están normalizados en el clip space (teniendo en cuenta que estaríamos visualizando un fragmento del plano $z=0$). Cabe en este momento aclarar que en el ámbito de herramientas de renderizado se utiliza el convenio de utilizar la coordenada $Y$ para la altura y la coordenada $Z$ para la profundidad.
+Tras crear y compilar el programa \textit{shader} y dotarlo de valores para sus variables \verb|attribute| y \verb|uniform|, procedemos a renderizar la escena completa con la función \verb|drawArrays|.
 
+\begin{lstlisting}
+const offset = 0;
+const vertexCount = 4;
+gl.drawArrays(gl.TRIANGLE_STRIP, offset, vertexCount);
+\end{lstlisting}
 
+\section{Primera imagen renderizada}
+
+Una vez conocemos los componentes principales de WebGL, es momento de utilizarlos para crear alguna imagen.
+
+A modo de ejemplo, y aprovechando las situaciones concretas que se han explicado a lo largo de esta sección, supongamos que queremos dibujar en el canvas un cuadrado de colores. Para ello, necesitamos 4 vértices, y para cada vértice su posición y un color, de forma que necesitamos variables \verb|attribute| en el \textit{vertex shader} que representen posición y color. Además, dicho color queremos que se interpole en cada píxel a partir del color de los vértices, para ello usaremos una variable \verb|varying| a la que le asociaremos el color del vértice en el \textit{vertex shader} y recibirá el color del pixel en el \textit{fragment shader} (es decir, recibirá del vertex shader precisamente lo que tiene que devolver).
+\begin{lstlisting}
+attribute vec4 aVertexPosition;
+attribute vec4 aVertexColor;
+
+varying lowp vec4 vColor;
+\end{lstlisting}
+
+Crearemos un buffer para almacenar las posiciones de los cuatro vértices y otro para sus colores. Éste último es el que se ha mostrado en el código de ejemplo de la sección \ref{subsection:buffer}. Servimos al shader de valores a partir de los buffer y el resultado es el mostrado en la imagen \ref{fig:ejemplo-wgl}.
+
+\begin{figure} [ht]
+    \centering
+    \includegraphics[scale = 0.4]{img/C5/ejemplo-shaders.png}
+    \caption{Cuadrado de colores renderizado con WebGL}
+    \label{fig:ejemplo-wgl}
+\end{figure}
+
+Fíjese cómo hay un vértice blanco, uno rojo, uno verde y uno azul, de forma que en los píxeles intermedios hay colores intermedios entre estos, fruto de la interpolación que se realiza entre \textit{vertex} y \textit{fragment shader}.
+
+Este ejemplo se corresponde al expuesto en \cite{MDN-1}, cuya adaptación podemos encontrar en el repositorio de este proyecto, concretamente en \url{https://github.com/JAntonioVR/Geometria-Fractal/blob/main/static/js/canvas.js} %TODO Cambiar si es necesario
+
+Sin embargo, no olvidemos que nuestro objetivo es la visualización de fractales, donde la característica principal de los mismos es que no se pueden expresar a partir de un conjunto de vértices o líneas, sino que son curvas o superficies totalmente irregulares. Por tanto, a efectos prácticos, nuestro vertex shader tomará como entrada los vértices $(-1,-1)$, $(1,-1)$, $(1,1)$ y $(-1,1)$ y no aplicará ninguna transformación, pues ya están normalizados en el clip space (teniendo en cuenta que estaríamos visualizando un fragmento del plano $z=0$). Cabe en este momento aclarar que en el ámbito de herramientas de renderizado se utiliza el convenio de utilizar la coordenada $Y$ para la altura y la coordenada $Z$ para la profundidad. 
+
+A partir de estos cuatro vértices, en el canvas se visualizarán dos triángulos que completarán la superficie completa del mismo. El vertex shader a partir de ahora será totalmente trivial, pues solo devolverá en la variable \verb|gl_Position| la misma posición que obtiene de los buffer
+
+\begin{lstlisting}
+attribute vec2 a_Position;
+void main() {
+    gl_Position = vec4(a_Position.x, a_Position.y, 0.0, 1.0);
+}
+\end{lstlisting}
+
+Mientras que, por su parte, el fragment shader podrá acceder a la posición (en coordenadas de dispositivo) del píxel que se está ejecutando mediante la variable \verb|gl_FragCoord| y a partir de estas coordenadas devolver un color en la variable \verb|gl_FragColor|. Es decir, estamos dibujando una escena completa, próximamente un fractal, en dos triángulos. Por ejemplo, las imágenes \ref{fig:julia-intro} y \ref{fig:mandelbrot-intro} son el resultado de esta metodología, la cual documentaremos detenidamente en los siguientes capítulos.
