--- a/memoria/main.tex
+++ b/memoria/main.tex
@@ -105,6 +105,11 @@
 
 \import{tex/capitulos/}{capitulo-5.tex}
 
+\chapter{visualización de fractales en 2D}
+\label{chap:fractales-2D}
+
+\import{tex/capitulos/}{capitulo-6.tex}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERENCIAS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
