Añado etiqueta al capítulo 3 (#49)

--- a/memoria/tex/capitulos/capitulo-3.tex
+++ b/memoria/tex/capitulos/capitulo-3.tex
@@ -195,6 +195,7 @@ Por resumir, de momento sabemos que:
 \end{eqnarray*}
 
 \subsection{Representación gráfica del conjunto de Mandelbrot}
+\label{subsection:representacion-mandelbrot}
 
 Buscamos ahora obtener alguna figura similar a la imagen \ref{fig:mandelbrot-intro} a partir del conocimiento que tenemos de $\mathcal M$. Como ya viene siendo costumbre, la idea es dividir el plano en una cantidad finita de píxeles, asignando a cada uno un número complejo $c$ y evaluar en cada uno si la órbita en $z=0$ converge o diverge. Para tomar esta decisión nos podemos apoyar en el teorema \ref{th:escape} para probar este resultado.
 
