Nuevos comandos para parte real e imaginaria (#49)

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -42,6 +42,8 @@
 \newcommand{\diam}[0]{\mathrm{diam}}
 \newcommand{\diminf}[0]{\underline{\dim}_B}
 \newcommand{\dimsup}[0]{\overline{\dim}_B}
+\renewcommand{\Re}[0]{\mathrm{Re}\ }
+\renewcommand{\Im}[0]{\mathrm{Im}\ }
 
 %MORE PACKAGES HERE
 \newcommand{\R}[0]{\mathbb{R}}
