--- a/memoria/tex/capitulos/capitulo-3.tex
+++ b/memoria/tex/capitulos/capitulo-3.tex
@@ -259,6 +259,7 @@ Al igual que en el caso de los conjuntos de Julia, \textit{Mathematica} tiene un
 El conjunto de Mandelbrot es considerado por muchos como el objeto más complejo de la matemática. Además de la belleza que muestra por sí solo, los detalles de $\mathcal{M}$ esconden bonitas estructuras: bulbos, valles, antenas, copias reducidas del propio $\mathcal{M}$\dots
 
 \section{Autosimilaridad de los conjuntos de Julia y Mandelbrot}
+\label{section:autosimilaridad-julia-mandelbrot}
 
 Ya en el comienzo de este capítulo mencionamos, y en las propias imágenes presentadas se puede comprobar, que los conjuntos de Julia y el conjunto de Mandelbrot no son objetos autosimilares, no al menos en el sentido de la definición \ref{def:autosimilaridad}. Sin embargo, sí contienen regiones y detalles que son autosimilares. En esta sección presentaremos algunas de las mismas.
 
